angular json updated

--- a/angular.json
+++ b/angular.json
@@ -42,6 +42,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/angular-dynamic-form",
               "budgets": [
                 {
                   "type": "initial",
