calculations and cross manipulations added

--- a/src/assets/json/formconfig.json
+++ b/src/assets/json/formconfig.json
@@ -117,6 +117,12 @@
             "label": "End Date",
             "name": "endDate",
             "value": ""
+        },
+        {
+            "type": "number",
+            "label": "Duration",
+            "name": "duration",
+            "value": ""
         }
     ]
 }
