--- a/src/assets/json/formconfig.json
+++ b/src/assets/json/formconfig.json
@@ -4,7 +4,10 @@
             "type": "text",
             "label": "Name",
             "name": "name",
-            "value": ""
+            "value": "Ganesh S",
+            "validators": {
+                "required": true
+            }
         },
         {
             "type": "dropdown",
@@ -122,7 +125,10 @@
             "type": "number",
             "label": "Duration",
             "name": "duration",
-            "value": ""
+            "value": "",
+            "validators": {
+                "min": 1
+            }
         }
     ]
 }
